kajit/src/backends/aarch64/snapshots/kajit__backends__aarch64__tests__linear_ir_micro_linear_ir_micro_gamma_u32_aarch64.snap
---
source: kajit/src/backends/aarch64/mod.rs
expression: out
---
> sub sp, sp, #0x40
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  mov x9, #<imm>
  mov x11, x9
  b $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x9, x11
  str w9, [x21]
  b $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x9, x11
  str w9, [x21]
  b $+0x4
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
