kajit/src/backends/aarch64/snapshots/kajit__backends__aarch64__tests__linear_ir_micro_linear_ir_micro_read_u32_aarch64.snap
---
source: kajit/src/backends/aarch64/mod.rs
expression: out
---
> sub sp, sp, #0x40
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  sub x9, x20, x19
  cmp x9, #0x4
  b.lo $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x4c
  sub x9, x20, x19
  cmp x9, #0x4
  b.lo $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x30
  ldr w9, [x19]
  mov x11, x9
  add x19, x19, #0x4
  mov x9, x11
  str w9, [x21]
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
